@@ -27,7 +27,7 @@
 int	cmp_double(double a,double b);
 int	find_char(char *str,char c);
 int	substitute_functions(char *exp);
-int	substitute_macros(DB_TRIGGER *trigger, DB_ACTION *action, char *exp);
+void	substitute_macros(DB_TRIGGER *trigger, DB_ACTION *action, char *data, int dala_max_len);
 int     evaluate_expression (int *result,char *expression,char *error,int maxerrlen);
 void	delete_reol(char *c);
 
