@@ -1,5 +1,6 @@
 Changes for 1.3:
 
+ - improved macro variables substitution in message body/subject (Eugene)
  - fixed order of displaying log files (Eugene)
  - added support of 'pfree' and 'pused' for 'vfs.fs.size' of windows (Eugene)
  - added '<=' comporator for trigger severity of action conditions (Eugene)
